--- a/umer-alihealth/pom.xml
+++ b/umer-alihealth/pom.xml
@@ -7,9 +7,9 @@
         <artifactId>umer-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>umer-alihealrh</artifactId>
+    <artifactId>umer-alihealth</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>umer-alihealrh</name>
+    <name>umer-alihealth</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>2.3.23</version>
+            <version>2.3.26-incubating</version>
         </dependency>
         <dependency>
             <groupId>org.apache.velocity</groupId>
