--- a/umer-alihealth/src/main/resources/application.yml
+++ b/umer-alihealth/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 server:
   port: 8082
+
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/healthact?useUnicode=true&useSSL=false&serverTimezone=UTC
-    username: root
-    password: root
+    url: jdbc:mysql://db.umer.com.cn:3306/healthact?useUnicode=true&useSSL=false&serverTimezone=UTC
+    username: hc
+    password: Hc0920
+    driver-class-name: com.mysql.jdbc.Driver
+
 mybatis:
   mapper-locations: classpath:/mapper/*.xml
   config-location: classpath:/mybatis-config.xml
