--- a/umer-alihealth/pom.xml
+++ b/umer-alihealth/pom.xml
@@ -28,6 +28,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.3</version>
         </dependency>
         <!--添加 代码生成器 依赖-->
         <dependency>
