--- a/umer-alihealth/src/main/resources/application-local.yml
+++ b/umer-alihealth/src/main/resources/application-local.yml
@@ -4,3 +4,8 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
+  redis:
+    host: 192.168.44.128 # Redis服务器地址
+    database: 0 # Redis数据库索引（默认为0）
+    port: 6379 # Redis服务器连接端口
+    password: 123456 #不设置密码
