--- a/umer-alihealth/src/main/resources/application.yml
+++ b/umer-alihealth/src/main/resources/application.yml
@@ -8,3 +8,23 @@ spring:
 mybatis:
   mapper-locations: classpath:/mapper/*.xml
   config-location: classpath:/mybatis-config.xml
+
+token:
+  # 密钥
+  secret-key: 123kafkahiwhfakna0808234*)*)(
+  # token 过期的秒数
+  token-expire-second: 60
+  # http header 中请求头的前缀
+  token-header-prefix: "Bearer "
+  # 认证头的header名字
+  authorization-header-name: "Authorization"
+  authorities: "AUTHORITIES"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
