--- a/umer-common/pom.xml
+++ b/umer-common/pom.xml
@@ -25,6 +25,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
