--- a/umer-alihealth/src/main/resources/application-dev.yml
+++ b/umer-alihealth/src/main/resources/application-dev.yml
@@ -9,3 +9,8 @@ spring:
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: 123456 #不设置密码
+
+alihealth:
+  appkey: "***"
+  url: "https://eco.taobao.com/router/rest"
+  secret: "****"
