--- a/umer-alihealth/src/main/resources/application-prod.yml
+++ b/umer-alihealth/src/main/resources/application-prod.yml
@@ -4,3 +4,18 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
+  redis:
+    host: 47.106.80.195 # Redis服务器地址
+    database: 1 # Redis数据库索引（默认为0）
+    port: 6379 # Redis服务器连接端口
+    password: * #不设置密码
+    timeout: 5000
+
+alihealth:
+  appkey: "**"
+  url: "https://eco.taobao.com/router/rest"
+  secret: "***"
+#alihealth:
+#  appkey: "**"
+#  url: "https://gw.api.tbsandbox.com/router/rest"
+#  secret: "**"
